ui: add fiat value to order preview in trade form

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -370,6 +370,9 @@
 
                   {{- /* ORDER PREVIEW */ -}}
                   <div class="mt-2 fs14 text-end" id="orderPreview"></div>
+                  <div class="fs14 text-end grey d-hide" id="orderPreviewFiat">
+                    ~<span id="orderPreviewFiatValue"></span> USD
+                  </div>
 
                   {{- /* TIME-IN-FORCE CHECK BOX */ -}}
                   <div class="my-1 text-start form-check" id="tifBox">
