client/webserver: Implement politeia APIs and pages
This commit implements the proposals list page and the single view proposal page
with light refactoring which icludes proper handling of URL quries in JS.

This commit also implements the /castvotes API endpoint that handles
casting tickets vote on a voting proposal.

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/css/components.scss
+++ b/client/webserver/site/src/css/components.scss
@@ -302,6 +302,8 @@ input:invalid {
   border-right: 1px solid var(--border-color);
 }
 
+div[data-handler=proposal]
+div[data-handler=proposals]
 div[data-handler=dexsettings],
 div[data-handler=init],
 div[data-handler=login],
@@ -335,4 +337,9 @@ div[data-handler=wallets] {
   &.right {
     right: 0;
   }
+}
+
+.card {
+  background-color: var(--body-bg);
+  padding: 3px;
 }
