--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -44,6 +44,8 @@
     <div id="headerSpace"></div>
     <div class="mainlinks fs18 pe-2 text-nowrap">
 
+      <a href="/proposals" class="demi hoverbg{{if not $authed}} d-hide{{end}}" id="proposalsMenuEntry">Proposals</a>
+
       <a href="/wallets" class="demi hoverbg{{if not $authed}} d-hide{{end}}" id="walletsMenuEntry">[[[Wallet]]]</a>
 
       <a href="/markets" class="demi hoverbg d-hide" id="marketsMenuEntry">[[[Trade]]]</a>
