multi: Bridge UI
Adds a UI to the wallets page that allows users to bridge EVM assets
between chains.

Additionally:
- Communicates fees for bridge completion transactions to the initiator
- Adds an index to the eth transaction db to be able to query bridge
  initiations by asset ID.

--- a/client/webserver/site/src/css/utilities.scss
+++ b/client/webserver/site/src/css/utilities.scss
@@ -30,7 +30,9 @@
   position: absolute;
 }
 
-.hoverbg:hover {
+.hoverbg:hover,
+.hoverbg.active,
+.hoverbg.selected {
   background-color: var(--tertiary-bg);
 }
 
