--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -669,7 +669,7 @@
             <span class="ico-info fs12" data-tooltip="[[[internal_only_tooltip]]]"></span>
           </label>
         
-          <div id="baseMinTransferSection" class="d-flex flex-column align-items-start pt-2 mt-2 border-top">
+          <div id="baseMinTransferSection" class="d-hide d-flex flex-column align-items-start pt-2 mt-2 border-top">
             <div class="fs17 pb-1">
               <img data-base-logo class="mini-icon">
               <span data-base-ticker></span> Minimum Transfer
@@ -683,7 +683,7 @@
             </div>
           </div>
 
-          <div id="quoteMinTransferSection" class="d-flex flex-column align-items-start pt-2 mt-2 border-top">
+          <div id="quoteMinTransferSection" class="d-hide d-flex flex-column align-items-start pt-2 mt-2 border-top">
             <div class="fs17 pb-1">
               <img data-quote-logo class="mini-icon">
               <span data-quote-ticker></span> Minimum Transfer
@@ -697,7 +697,7 @@
             </div>
           </div>
 
-          <div id="baseBridgeSection" class="d-flex flex-column align-items-start pt-2 mt-2 border-top">
+          <div id="baseBridgeSection" class="d-hide d-flex flex-column align-items-start pt-2 mt-2 border-top">
             <div class="fs17 pb-1">
               <img data-base-logo class="mini-icon">
               <span data-base-ticker></span> Bridge Configuration
@@ -717,7 +717,7 @@
             </div>
           </div>
 
-          <div id="quoteBridgeSection" class="d-flex flex-column align-items-start pt-2 mt-2 border-top">
+          <div id="quoteBridgeSection" class="d-hide d-flex flex-column align-items-start pt-2 mt-2 border-top">
             <div class="fs17 pb-1">
               <img data-quote-logo class="mini-icon">
               <span data-quote-ticker></span> Bridge Configuration
