--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -837,8 +837,8 @@
   <label for="cexSecretInput">[[[API Secret]]]</label>
   <input type="text" data-tmpl="cexSecretInput" autocomplete="off">
 </div>
-<div class="d-flex flex-column" data-tmpl="cexPassphraseBox">
-  <label for="cexPassphraseInput">[[[API Passphrase]]] <span class="fs14 grey">(optional)</span></label>
+<div class="d-flex flex-column d-hide" data-tmpl="cexPassphraseBox">
+  <label for="cexPassphraseInput">[[[API Passphrase]]]</label>
   <input type="text" data-tmpl="cexPassphraseInput" autocomplete="off">
 </div>
 <div data-tmpl="cexFormErr" class="flex-center text-danger text-break d-hide"></div>
