ui: Clean up dead code in MMSettings React rewrite.
Remove debug console.log from mmutil.ts feeAssetID. Remove 9 unused
locale keys from jsintl.go. Remove ~100 lines of dead CSS selectors
from mm.scss. Fix Bootstrap grid calculation (24 -> 12 columns) in
ManualAllocation. Use nullish coalescing for falsy default values in
BotConfig. Add null guards for walletMap entries. Wrap
fetchCEXAssetAndBridgeInfo in try/catch for botConfigStateFromSavedConfig.
Fix Math.log10 precision with Math.round. Fix tooltip positioning width
to match maxWidth. Use actual fiat rates in PlacementsChartWrapper. Add
division-by-zero guard in QuickPlacements usdToLots. Fix inconsistent
template call in mmsettings.tmpl. Improve error stringification in
CEXConfigForm.

--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -2,5 +2,5 @@
 {{template "top" .}}
 <div id="main" data-handler="mmsettings" class="flex-grow-1 flex-stretch-column stylish-overflow">
 </div>
-{{template "bottom" .}}
+{{template "bottom"}}
 {{end}}
