implement lexi db for politeia and improvements
This commit impelements the lexi db for politeia and adds
some improvements to the existing code.

It also includes fixes for all previous review change requests.

Note: Some lexi varibles were exported in this commit.

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/css/proposals.scss
+++ b/client/webserver/site/src/css/proposals.scss
@@ -1,4 +1,4 @@
-#sectionProposals {
+#proposals {
   max-width: 500px;
   width: 100%;
 }
@@ -31,7 +31,7 @@
 }
 
 .page-link.is-active {
-  background-color: var(--subtle-link-color);
+  background-color: var(--link-color);
   color: #fff;
   cursor: default;
   pointer-events: none;
@@ -81,12 +81,4 @@
 
 .search-bar button:hover {
   color: var(--btn-feature-hover-bg);
-}
-
-.tab {
-  height: 40px;
-  padding: 0 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
